# todoApp_Backend

./: pyproject.toml
sqlmodel_crud/: main.py
