[tool.poetry]
name = "sqlmodel-crud"
version = "0.1.0"
description = ""
authors = ["AsimRaza <57153665+SyedAsimRazaNaqvi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
